fixed overlapping

--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -190,3 +190,9 @@
     padding: 79px 0;
   }
 }
+
+@media (min-width: 1800px) {
+  .reviews__wrapper {
+    padding-bottom: 30px;
+  }
+}
